<resources>
    <string name="app_name">RoomMiniProject</string>

    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="title_activity_buttom_navigation">ButtomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>